--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "onoff": "^3.2.2",
     "pi-camera": "^1.2.1",
+    "pi-camera-connect": "^0.2.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   }
