--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pi-camera-connect": "^0.2.0",
     "raspberry-pi-camera-native": "0.0.0",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "socket.io-stream": "^0.9.1"
   }
 }
